--- a/source/scss/components/_accordion-section.scss
+++ b/source/scss/components/_accordion-section.scss
@@ -4,6 +4,10 @@
     margin-bottom: 45px;
   }
 
+  .h2-pc-hidden {
+    display: none;
+  }
+
   .image-wrapper {
 
     img {
@@ -17,7 +21,6 @@
 .accordion-section-w-image .image-wrapper img {
   opacity: 0;
   visibility: hidden;
-  overflow: hidden;
   max-width: 0;
   height: 0;
   transition: 0.3s;
@@ -26,9 +29,8 @@
 .accordion-section-w-image .image-wrapper.show img {
   opacity: 1;
   visibility: visible;
-  overflow: visible;
   max-width: initial;
-  height: initial;
+  height: 700px;
 }
 
 .accordion-section-w-image .accordion-new .accordion-new-item .accordion-new-item-content {
@@ -40,3 +42,29 @@
   max-height: 3000px;
 }
 
+@media (max-width: 1024px) {
+  .accordion-section  {
+
+    .h2 {
+      display: none;
+    }
+    .h2-pc-hidden {
+      display: block;
+      margin: 40px 0 15px;
+    }
+  }
+
+  .accordion-section-w-image .image-wrapper.show img {
+    height: 386px;
+  }
+
+}
+
+@media (max-width: 600px) {
+  .accordion-section {
+
+    .h2-pc-hidden {
+      margin: 30px 0 5px;
+    }
+  }
+}
