--- a/source/scss/components/_program-cards-block.scss
+++ b/source/scss/components/_program-cards-block.scss
@@ -82,3 +82,77 @@
     }
   }
 }
+
+@media (max-width: 1024px) {
+  .program-cards-section {
+
+    .program-list {
+
+      .program-list-item {
+        flex-wrap: wrap;
+
+        .program-item-col {
+          display: flex;
+          flex-direction: column;
+
+          .program-item-title {
+            order: 1;
+            margin-top: 12px;
+            margin-bottom: 40px;
+          }
+
+          .program-item-links {
+            padding-top: 0;
+          }
+
+          &:nth-of-type(2) {
+            padding-left: 0;
+          }
+
+          &:nth-of-type(3) {
+            align-items: flex-start;
+            margin-top: 50px;
+          }
+
+          &:nth-of-type(1),
+          &:nth-of-type(2),
+          &:nth-of-type(3)
+          {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .program-cards-section {
+
+    .program-list {
+
+      .program-list-item {
+
+        .program-item-col {
+
+          .program-item-title {
+            margin-bottom: 20px;
+            font-size: 28px;
+            line-height: 34px;
+          }
+
+          .program-item-image {
+
+            img {
+              height: 200px;
+            }
+          }
+        }
+      }
+    }
+
+    .h2 {
+      margin-bottom: 30px;
+    }
+  }
+}
