--- a/source/scss/components/_accordion.scss
+++ b/source/scss/components/_accordion.scss
@@ -60,6 +60,10 @@
 
   }
 
+  .accordion-new-item:not(.active) .accordion-new-item-content {
+    height: 0!important;
+  }
+
   .accordion-new-item.active {
 
     .accordion-new-item-header {
@@ -87,6 +91,23 @@
 
         &:after {
 
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .accordion-new {
+    .accordion-new-item {
+      .accordion-new-item-header {
+        padding: 20px 25px 20px 0;
+        font-size: 20px;
+        line-height: 24px;
+
+        &:after {
+          border-width: 0 3px 3px 0;
+          padding: 5px;
         }
       }
     }
