--- a/source/scss/components/_apply-section.scss
+++ b/source/scss/components/_apply-section.scss
@@ -21,6 +21,7 @@
     text-transform: uppercase;
     font-size: 60px;
     line-height: 60px;
+    margin-bottom: 0;
   }
 
   .textwidget {
@@ -34,4 +35,60 @@
     }
   }
 
+}
+
+@media (max-width: 1024px) {
+  .apply-section  {
+
+    .widget {
+      flex-wrap: wrap;
+    }
+
+    .h4 {
+      max-width: 100%;
+    }
+
+    .widgettitle {
+      width: 100%;
+      max-width: 100%;
+
+      br {
+        display: none;
+      }
+    }
+
+    .textwidget {
+      width: 100%;
+      padding-top: 40px;
+      margin-bottom: 26px;
+
+      p {
+        max-width: 75%;
+      }
+    }
+
+    .btn {
+      margin-left: 0;
+      max-width: 335px;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .apply-section {
+    padding: 40px 0;
+
+    .textwidget {
+      padding-top: 30px;
+      margin-bottom: 30px;
+
+      p {
+        max-width: 100%;
+      }
+    }
+    .btn {
+      width: fit-content;
+    }
+  }
 }
