--- a/source/scss/components/_block-inline-list.scss
+++ b/source/scss/components/_block-inline-list.scss
@@ -31,3 +31,43 @@
   }
 
 }
+
+@media (max-width: 1024px) {
+  .inline-list-section {
+    margin-bottom: 70px;
+
+    .inline-program-item {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .inline-list-section {
+    margin-bottom: 55px;
+
+    .inline-program-item  {
+      margin-bottom: 25px;
+
+      .inline-item-title {
+        font-size: 28px;
+        line-height: 34px;
+      }
+      .inline-item-desc {
+
+        p {
+          font-size: 23px;
+          line-height: 28px;
+        }
+      }
+    }
+
+    .title-wrapper {
+      margin-bottom: 30px;
+
+      .link-red {
+        display: none;
+      }
+    }
+  }
+}
