--- a/source/scss/components/_main-banner.scss
+++ b/source/scss/components/_main-banner.scss
@@ -1,15 +1,28 @@
 .main-banner {
   margin: 0 0 150px;
+  height: initial;
+  max-width: 100%;
+  overflow: hidden;
+
+  .container {
+    padding: 25px 24px 0;
+  }
 
   .h1 {
     width: 100%;
     margin-bottom: 50px;
+    color: $--color-black;
+    margin-left: 0;
+    max-width: 100%;
+    height: initial;
+    letter-spacing: 0;
 
     span {
+      display: block;
+      width: 100%;
 
       &:nth-of-type(2) {
-        padding-left: 77px;
-        white-space: nowrap;
+        margin-left: 70px;
       }
     }
   }
@@ -19,6 +32,10 @@
     justify-content: flex-end;
     width: 100%;
     margin-bottom: 20px;
+
+    br {
+      display: none;
+    }
 
     p {
       font-size: 20px;
@@ -38,6 +55,16 @@
     width: 100%;
     display: flex;
     position: relative;
+
+    .banner-image {
+      height: 700px;
+      width: 100%;
+      img {
+        width: 100%;
+        object-fit: cover;
+        height: inherit;
+      }
+    }
 
     .btn {
       position: absolute;
@@ -59,5 +86,35 @@
       margin-left: 37px;
       width: 34%;
     }
+  }
+}
+
+@media (max-width: 1024px) {
+  .main-banner {
+    margin: 0 0 140px;
+
+    .container {
+      padding: 25px 42px 0;
+    }
+
+    .h1 {
+      font-size: 70px;
+      line-height: 84px;
+      margin-bottom: 40px;
+    }
+
+    .banner-description {
+      margin-bottom: 10px;
+    }
+
+    .banner-wrapper {
+      .banner-image {
+        height: 440px;
+      }
+      .btn {
+        left: 50px;
+      }
+    }
+
   }
 }
