--- a/source/scss/components/_map-block.scss
+++ b/source/scss/components/_map-block.scss
@@ -1,5 +1,9 @@
 .map-section {
 
+  .pc-hidden-block {
+    display: none;
+  }
+
   .map-wrapper {
     height: 578px;
     width: 100%;
@@ -29,6 +33,112 @@
 
     .h2 {
       margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .map-section {
+
+    .h2 {
+      margin-bottom: 45px;
+    }
+
+    .map-content-tablet {
+      display: flex;
+      align-items: flex-end;
+      width: 100%;
+      justify-content: space-between;
+
+      .map-wrapper {
+        margin-top: 0;
+        height: 370px;
+        width: 32%;
+        order: 1;
+      }
+
+      .pc-hidden-block {
+        width: 68%;
+      }
+    }
+
+    .col-md-12:nth-of-type(2) {
+      order: -1;
+    }
+
+    .map-section-content {
+      display: none;
+    }
+
+    .image-wrapper {
+      display: none;
+
+      img {
+        height: 230px;
+        width: 100%;
+        object-fit: cover;
+        object-position: top;
+      }
+    }
+
+    .pc-hidden-block {
+      display: block;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .map-section {
+
+    .link-red {
+      width: 100%;
+      height: 48px;
+      border: 1px solid $--color-black;
+      justify-content: center;
+      border-radius: 60px;
+    }
+
+    .h2 {
+      margin-bottom: 10px;
+    }
+
+    .col-m-12:nth-of-type(2) {
+      order: 1;
+    }
+
+    .map-content-tablet {
+
+      .map-wrapper {
+        width: 100%;
+        margin-bottom: 24px;
+        height: 175px;
+      }
+    }
+
+    .map-section-content {
+      display: block;
+
+      .h2 {
+        font-size: 30px;
+        line-height: 30px;
+        margin-bottom: 20px;
+      }
+    }
+    .map-section-content {
+
+      .image-wrapper {
+
+        img {
+          height: 262px;
+        }
+      }
+    }
+    .image-wrapper {
+      display: block;
+      margin-top: 40px;
+    }
+    .pc-hidden-block {
+      display: none;
     }
   }
 }
