--- a/source/scss/components/_request-section.scss
+++ b/source/scss/components/_request-section.scss
@@ -12,9 +12,102 @@
     align-items: center;
     padding: 88px 80px 88px 85px;
     width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url(../img/request-section-back.png);
+    position: relative;
+    height: 278px;
   }
+
+  .background-request {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .background-request-tablet {
+    display: none;
+  }
+
+  .background-request-mobile {
+    display: none;
+  }
+
+}
+
+@media (max-width: 1024px) {
+  .request-section {
+
+    .background-request-pc {
+      display: none;
+    }
+
+    .background-request-tablet {
+      display: block;
+    }
+
+    .h2 {
+      font-size: 50px;
+      line-height: 50px;
+      max-width: 50%;
+    }
+
+    .request-block {
+      padding: 46px 46px 46px 30px;
+    }
+
+  }
+}
+
+@media (max-width: 600px) {
+
+  .request-section {
+
+    .h2 {
+      margin-bottom: 20px;
+    }
+
+    .btn-circle {
+      width: 100%;
+      height: 50px;
+      min-width: initial;
+      min-height: initial;
+      border-radius: 50px;
+    }
+    .btn-circle-arrow {
+      flex-direction: row;
+
+      &:before {
+        margin-bottom: 0;
+        order: 1;
+        margin-left: 10px;
+      }
+    }
+
+    .request-block {
+      height: 452px;
+      padding: 35px 15px;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: flex-start;
+    }
+
+
+    .background-request-tablet {
+      display: none;
+    }
+
+    .background-request-mobile {
+      display: block;
+    }
+  }
+
+
+
 }
