--- a/source/scss/components/_stats-about-section.scss
+++ b/source/scss/components/_stats-about-section.scss
@@ -6,6 +6,10 @@
     font-weight: 300;
   }
 
+  .h2-pc-hidden {
+    display: none;
+  }
+
   .image-wrapper {
 
     img {
@@ -64,4 +68,94 @@
     }
   }
 
+}
+
+@media (max-width: 1024px) {
+
+  .stats-about-section {
+
+    .image-wrapper {
+
+      img {
+        height: 630px;
+      }
+    }
+
+    .h2 {
+      display: none;
+    }
+    .h2-pc-hidden {
+      display: block;
+      margin-bottom: 0;
+      max-width: 100%;
+    }
+    .table-container {
+      padding: 80px 0 0;
+    }
+    table {
+
+      tr {
+
+        td {
+
+          &:nth-of-type(1) {
+            width: initial;
+          }
+
+          &:nth-of-type(2) {
+            padding-right: 0;
+            padding-left: 24px;
+            width: initial;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .stats-about-section {
+
+    .image-wrapper {
+
+      img {
+        height: 200px;
+      }
+    }
+
+    .table-container {
+      padding: 30px 0 0;
+    }
+
+    table {
+
+      tr {
+        td {
+          padding: 20px 0;
+
+          &:nth-of-type(1) {
+            font-size: 37px;
+            line-height: 37px;
+          }
+          &:nth-of-type(2) {
+            font-size: 16px;
+            line-height: 19px;
+          }
+        }
+      }
+    }
+
+    .col-m-12:nth-of-type(2) {
+      order: -1;
+    }
+
+    .h2 {
+      display: block;
+      margin-bottom: 20px;
+    }
+
+    .h2-pc-hidden {
+      display: none;
+    }
+  }
 }
