--- a/source/scss/abstract/_font-face.scss
+++ b/source/scss/abstract/_font-face.scss
@@ -1,49 +1,63 @@
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica55Roman/Helvetica55Roman.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica55Roman/Helvetica55Roman.otf) format("opentype");
 }
 
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica35Thin/Helvetica35Thin.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica35Thin/Helvetica35Thin.otf) format("opentype");
   font-weight: 100;
 }
 
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica75Bold/Helvetica75Bold.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica75Bold/Helvetica75Bold.otf) format("opentype");
   font-weight: bold;
 }
 
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica65Medium/Helvetica65Medium.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica65Medium/Helvetica65Medium.otf) format("opentype");
   font-weight: 500;
 }
 
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica45Light/Helvetica45Light.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica45Light/Helvetica45Light.otf) format("opentype");
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica56Italic/Helvetica56Italic.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica56Italic/Helvetica56Italic.otf) format("opentype");
   font-style: italic;
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica56Italic/Helvetica56Italic.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica56Italic/Helvetica56Italic.otf) format("opentype");
   font-style: italic;
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Helvetica Neue LT Std";
-  src: url(../fonts/Helvetica/Helvetica76BoldItalic/Helvetica76BoldItalic.otf) format("opentype");
+  src: url(/wp-includes/fonts/Helvetica/Helvetica76BoldItalic/Helvetica76BoldItalic.otf) format("opentype");
   font-style: italic;
   font-weight: bold;
+}
+
+@font-face {
+
+  font-family: IcoMoon;
+
+  src: url(fonts/icomoon.eot);
+
+  src: url(fonts/icomoon.eot) format("embedded-opentype"), url(fonts/icomoon.woff2) format("woff2"), url(fonts/icomoon.woff) format("woff"), url(fonts/icomoon.ttf) format("truetype"), url(fonts/icomoon.svg) format("svg");
+
+  font-weight: 400;
+
+  font-style: normal
+
 }
