--- a/source/scss/base/_base.scss
+++ b/source/scss/base/_base.scss
@@ -2,6 +2,20 @@ section.margin-control {
   margin: 170px 0;
 }
 
+body::-webkit-scrollbar {
+  width: 6px
+}
+
+body::-webkit-scrollbar-track {
+  background: #F1F5FB;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: $--color-red;
+  border-radius: 20px;
+  border: 3px solid $--color-red;
+}
+
 .default-video-wrapper {
   display: flex;
   align-items: center;
