--- a/source/scss/components/_accordion-level.scss
+++ b/source/scss/components/_accordion-level.scss
@@ -109,8 +109,13 @@
           td {
             text-align: start;
             vertical-align: top;
-            padding: 30px 0 15px;
+            padding: 6px 0;
             border: 1px solid $--color-grey-2;
+            transition: 0.3s;
+
+            &:nth-of-type(1) {
+              padding: 12px 0;
+            }
 
             &:nth-of-type(2) {
               padding-left: 30px;
@@ -146,6 +151,7 @@
               display: flex;
               width: 100%;
               justify-content: space-between;
+              align-items: center;
 
               .td-column-subtitle {
                 font-size: 25px;
@@ -153,7 +159,7 @@
                 line-height: 29px;
                 color: $--color-black;
               }
-              .td-table-link {
+              .td-table-link span {
                 font-size: 18px;
                 font-weight: 700;
                 line-height: 21px;
@@ -166,11 +172,44 @@
         }
       }
 
+      .table-accordion-item {
+        .span-show {
+          display: block;
+        }
+        .span-hidden {
+          display: none;
+        }
+      }
+
 
     }
 
     .accordion-new-item.active {
       border-bottom: 0;
+
+     .table-accordion-item.show {
+
+       td:nth-of-type(1) {
+         padding-top: 35px;
+       }
+
+       td:nth-of-type(2) {
+         padding: 35px 30px 15px;
+       }
+
+       .span-show {
+         display: none;
+       }
+       .span-hidden {
+         display: block;
+       }
+       .td-column-subtitle {
+         display: none;
+       }
+       .td-column-bottom {
+         justify-content: flex-end;
+       }
+     }
 
       .accordion-new-item-header .accordion-new-header-status {
         color: $--color-black;
