--- a/source/scss/components/_accordion.scss
+++ b/source/scss/components/_accordion.scss
@@ -8,6 +8,16 @@
     background-color: $--color-white;
     border-bottom: 1px solid $--color-black;
 
+    ul {
+      li {
+        margin-bottom: 15px;
+
+        &:last-of-type {
+          margin-bottom: 0;
+        }
+      }
+    }
+
     &:last-of-type {
       border-bottom: 0;
     }
@@ -46,7 +56,7 @@
       transition: height 0.3s ease-in-out;
       height: 0;
 
-      p, a, span {
+      * {
         font-size: 16px;
         font-weight: 300;
         line-height: 19px;
