--- a/source/scss/components/_faq-section.scss
+++ b/source/scss/components/_faq-section.scss
@@ -12,7 +12,7 @@
     }
   }
 
-  .accordion-new .accordion-new-item .accordion-new-item-content p, .accordion-new .accordion-new-item .accordion-new-item-content a, .accordion-new .accordion-new-item .accordion-new-item-content span {
+  .accordion-new .accordion-new-item .accordion-new-item-content * {
     font-size: 20px;
     line-height: 24px;
   }
